--- a/library-sys-inven-mgmt/src/main/resources/static/css/style.css
+++ b/library-sys-inven-mgmt/src/main/resources/static/css/style.css
@@ -1,22 +1,22 @@
-*{
-    background-color: #2e2e2e;
-    color: white;
+#page-title{
+    padding-top: 2vh; 
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+    gap: 4vh;
+    margin-bottom: 1vh;
 }
-.site-header{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 20px;
+.title-bold-text{
+    font-weight: 700;
 }
-.header-logo{
-    height: 50px;
+.edit-delete-container{
+    display: flex; 
+    gap: 1vh;
+    flex-direction: column; 
+    align-items: end;
+    padding-right: 1vw;
+}
+.edit-delete-buttons{
+    height: 3vh;
     width: auto;
-}
-h1{
-    padding: 10px;
-    font-size: larger;
-}
-.navbar{
-    background-color: #575757;
-    padding: 20px; /* this isn't working... */
 }
