added event listeners for edit and delete buttons

--- a/library-sys-inven-mgmt/src/main/resources/static/css/style.css
+++ b/library-sys-inven-mgmt/src/main/resources/static/css/style.css
@@ -23,7 +23,7 @@
     align-items: end;
     padding-right: 1vw;
 }
-.edit-delete-buttons{
+.edit-button, .delete-button{
     height: 3vh;
     width: auto;
 }
