--- a/library-sys-inven-mgmt/src/main/resources/static/css/style.css
+++ b/library-sys-inven-mgmt/src/main/resources/static/css/style.css
@@ -12,16 +12,19 @@
 }
 #dashboard-nav{
     font-size: 2vh;
+    padding-right: 4vh;
 }
 #adv-search-nav{
     font-size: 2vh;
+    padding-left: 3vh;
 }
 .edit-delete-container{
     display: flex; 
-    gap: 1vh;
-    flex-direction: column; 
-    align-items: end;
-    padding-right: 1vw;
+    gap: 5vh;
+    flex-direction: row; 
+    align-items: center;
+    padding-left: 2vw;
+    padding-top: 0.5vh;
 }
 .edit-button, .delete-button{
     height: 3vh;
