Added ability to view books and close the books table, cleaned up some code

--- a/library-sys-inven-mgmt/src/main/resources/static/css/style.css
+++ b/library-sys-inven-mgmt/src/main/resources/static/css/style.css
@@ -30,6 +30,9 @@
     height: 3vh;
     width: auto;
 }
-#edit-library-form, #delete-library-form{
+#new-book-form{
+    margin-top: 5vh;
+}
+#edit-library-form, #delete-library-form, #new-book-form{
     display: none;
 }
